tests/transpiler/x/fs/in_operator.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/transpiler/x/fs/in_operator.fs(5,26): error FS0039: The field, constructor or member 'Contains' is not defined

/workspace/mochi/tests/transpiler/x/fs/in_operator.fs(6,31): error FS0039: The field, constructor or member 'Contains' is not defined
