tests/transpiler/x/fs/in_operator.fs
// Mochi 0.10.31 - generated 2025-07-19 14:22:14 UTC
open System

let xs = [1; 2; 3]
printfn "%s" (string (xs.Contains(2)))
printfn "%s" (string (not (xs.Contains(5))))
